--- a/public/index.html
+++ b/public/index.html
@@ -90,19 +90,19 @@
             required
           >
             <option value="">בחרו בית חולים</option>
-            <option value="soroka">המרכז הרפואי סורוקה – באר שבע (כללית)</option>
-            <option value="rabin">המרכז הרפואי רבין – פתח תקווה (כללית)</option>
-            <option value="schneider">המרכז הרפואי שניידר לרפואת ילדים בישראל – פתח תקווה (כללית)</option>
-            <option value="emek">המרכז הרפואי העמק – עפולה (כללית)</option>
-            <option value="meir">המרכז הרפואי מאיר – כפר סבא (כללית)</option>
-            <option value="kaplan">המרכז הרפואי קפלן – רחובות (כללית)</option>
-            <option value="carmel">המרכז הרפואי כרמל – חיפה (כללית)</option>
-            <option value="yoseftal">המרכז הרפואי יוספטל – אילת (כללית)</option>
-            <option value="geha">המרכז לבריאות הנפש גהה – פתח תקווה (כללית)</option>
-            <option value="shalvata">המרכז לבריאות הנפש שלוותה – הוד השרון (כללית)</option>
-            <option value="loewenstein">המרכז הרפואי לשיקום לוינשטיין – רעננה (כללית)</option>
-            <option value="rivka">בית רבקה – מרכז גריאטרי שיקומי, פתח תקווה (כללית)</option>
-            <option value="herzfeld">המרכז הרפואי הרצפלד – גדרה (כללית)</option>
+            <option value="soroka (Clalit)">המרכז הרפואי סורוקה – באר שבע (כללית)</option>
+            <option value="rabin (Clalit)">המרכז הרפואי רבין – פתח תקווה (כללית)</option>
+            <option value="schneider (Clalit)">המרכז הרפואי שניידר לרפואת ילדים בישראל – פתח תקווה (כללית)</option>
+            <option value="emek (Clalit)">המרכז הרפואי העמק – עפולה (כללית)</option>
+            <option value="meir (Clalit)">המרכז הרפואי מאיר – כפר סבא (כללית)</option>
+            <option value="kaplan (Clalit)">המרכז הרפואי קפלן – רחובות (כללית)</option>
+            <option value="carmel (Clalit)">המרכז הרפואי כרמל – חיפה (כללית)</option>
+            <option value="yoseftal (Clalit)">המרכז הרפואי יוספטל – אילת (כללית)</option>
+            <option value="geha (Clalit)">המרכז לבריאות הנפש גהה – פתח תקווה (כללית)</option>
+            <option value="shalvata (Clalit)">המרכז לבריאות הנפש שלוותה – הוד השרון (כללית)</option>
+            <option value="loewenstein (Clalit)">המרכז הרפואי לשיקום לוינשטיין – רעננה (כללית)</option>
+            <option value="rivka (Clalit)">בית רבקה – מרכז גריאטרי שיקומי, פתח תקווה (כללית)</option>
+            <option value="herzfeld (Clalit)">המרכז הרפואי הרצפלד – גדרה (כללית)</option>
             <option value="sheba">המרכז הרפואי שיבא – רמת גן</option>
             <option value="ichilov">המרכז הרפואי איכילוב  – תל אביב</option>
             <option value="hadassah-ein-kerem">המרכז הרפואי הדסה עין כרם – ירושלים</option>
